# configuration-manager

./: README.md
configuration-manager/: CMakeLists.txt  README.md
configuration-manager/applications/: CMakeLists.txt
configuration-manager/applications/confManagerApplication1/: CMakeLists.txt  ConfApp.cpp  ConfApp.hpp  main.cpp
configuration-manager/src/: ApplicationObject.cpp  ApplicationObject.hpp  CinfigurationManager.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  main.cpp
